--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,58 @@
-
+.body-pagina{
+    background-color: #F3F5FC;
+    width: 940px;
+    height: 750px;
+}
+.imagen-superior {
+    margin-top: 30px;
+    margin-left: 30px;
+}
 .opciones{
     position: absolute;
-    left: 600px;
+    left: 625px;
     top: 350px;
 }
 
 #tablero{
     position: absolute;
-    top: 50px;
+    top: 60px;
     left: 368px;
+}
+
+.opciones-juego {
+    position: absolute;
+    top: 600px;
+    left: 500px;
+}
+
+.estilo-boton1 {
+    color: #FFFFFF;
+    background-color: #0A3871;
+    height: 67px;
+    width: 250px;
+    border-radius: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s font-size;
+}
+
+.estilo-boton2 {
+    color: #0A3871;
+    background-color: #D8DFE8;
+    height: 67px;
+    width: 250px;
+    border-color: #0A3871;
+    border-radius: 20px;
+    margin-left: 75px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.5s font-size;
+}
+
+.estilo-boton1:hover, .estilo-boton2:hover{
+    font-size: 18px;
 }
 
