--- a/templates/juego.html
+++ b/templates/juego.html
@@ -9,8 +9,13 @@
         <link rel="stylesheet" href="../css/styles.css">
     </head>
 
-    <body id="body-juego">
+    <body id="body-juego" class="body-pagina">
+        <img src="../images/Logo.png" class="imagen-superior" alt="logo">
         <canvas id="tablero" width="800" height="500"></canvas>
+        <div class="opciones-juego">
+            <a href="juego.html"><button id="nuevo-juego" class="estilo-boton1">Nuevo juego</button></a>
+            <a href="../index.html"><button id="desistir" class="estilo-boton2">Desistir</button></a>
+        </div>
     </body>
     <script src="../js/inicio-juego.js"></script>
     <script src="../js/logica-juego.js"></script>
